  * Text from user info can be copied
  * Removed creeping line as there were too much bugs on some mobile phones
  * Menu "Minimize" is shown only on sony-ericsson phones
  * Options are now compartible between Jimm versions (will be imported from 0.2.0 on)
  * Pressing red button on Nokia phones will now end Jimm in a cleaner way
  * Internal data handling for ContactItems rewritten (should consume less heap)
  * Login time, online time and idle time can be seen on Information page
  * Code optimized for lower memory usage
  * External IP of contact are shown in client info
  * Status of temporary contacts and contacts awaiting authorization is shown
  * Improved dialogs for deleting chat and history (it is possible to delete
    current item, others items or all items)
  * It is possible to select full screen for contact list, chats etc...
  * New Option "Time" to setup time zone
  * Status of contact are shown in the caption of chat in fullscreen mode
  * Contacts groups management is extended. It is possible now to rename groups and
    to move contacts between groups.
  * Traffic Screen is now also using TextList for displaying information
  * Traffic now counts additional GPRS headers to be hopefully more accurate
  * Configurable "User-Agent:" header for HTTP-Connection to make Jimm work with 
    services which require special "User-Agent" when using HTTP.
  * New util JLFT - "Jimm Lang File Tool" for easy comparing and changing Jimm .lang files
  
_______________________________________________________________________________
VERSION 0.5.1

  * BUGFIX: Normal login was not working anymore (ICQ protocol change) (MD5 login did work)
  * Platform information is shown on about screen
  
_______________________________________________________________________________
VERSION 0.5.2
  * It is possible to send messages to contact without adding it to contact list
  * New test status icons were added (from Miranda set)